@@ -156,6 +156,18 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 
     ENDIF(NOT _manage_rpm_dependency_missing)
 
+    MACRO(RPM_SPEC_ADD_TAG tag value)
+	SET(_validOptions "SECTION")
+	VARIABLE_PARSE_ARGN(_opt _validOptions ${ARGN})
+	IF(NOT DEFINED _opt_SECTION)
+	    SET(_opt_SECTION "header")
+	ENDIF(NOT DEFINED _opt_SECTION)
+
+	STRING_PADDING(_str "${tag}:" ${RPM_SPEC_TAG_PADDING})
+	STRING_APPEND(RPM_SPEC_SECTION_${_opt_SECTION} 
+	    "${_str}${value}" "\n"
+	)
+    ENDMACRO(RPM_SPEC_ADD_TAG tag value)
 
     MACRO(MANAGE_RPM_CHANGELOG)
 	EXECUTE_PROCESS(COMMAND cat "${CHANGELOG_ITEM_FILE}"
@@ -352,43 +364,6 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_DATA_LIST})
     ENDMACRO(PRJ_RPM_SPEC_DATA_PREPARE)
-
-    MACRO(RPM_CHANGELOG_WRITE_FILE)
-	INCLUDE(DateTimeFormat)
-
-	FILE(WRITE ${RPM_CHANGELOG_FILE} "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}-${RPM_RELEASE_NO}\n")
-	EXECUTE_PROCESS(COMMAND cat "${CMAKE_FEDORA_CHANGELOG_ITEM_FILE}"
-	    OUTPUT_VARIABLE CHANGELOG_ITEMS
-	    OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-	FILE(APPEND ${RPM_CHANGELOG_FILE} "${CHANGELOG_ITEMS}\n\n")
-
-	# Update RPM_ChangeLog
-	# Use this instead of FILE(READ is to avoid error when reading '\'
-	# character.
-	EXECUTE_PROCESS(COMMAND cat "${RPM_CHANGELOG_PREV_FILE}"
-	    OUTPUT_VARIABLE RPM_CHANGELOG_PREV
-	    OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-	FILE(APPEND ${RPM_CHANGELOG_FILE} "${RPM_CHANGELOG_PREV}")
-
-	ADD_CUSTOM_COMMAND(OUTPUT ${RPM_CHANGELOG_FILE}
-	    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
-	    DEPENDS ${CHANGELOG_FILE} ${RPM_CHANGELOG_PREV_FILE}
-	    COMMENT "Write ${RPM_CHANGELOG_FILE}"
-	    VERBATIM
-	    )
-
-	ADD_CUSTOM_TARGET(rpm_changelog_prev_update
-	    COMMAND ${CMAKE_COMMAND} -E copy ${RPM_CHANGELOG_FILE} ${RPM_CHANGELOG_PREV_FILE}
-	    DEPENDS ${RPM_CHANGELOG_FILE}
-	    COMMENT "${RPM_CHANGELOG_FILE} are saving as ${RPM_CHANGELOG_PREV_FILE}"
-	    )
-
-	IF(TARGET after_release_commit_pre)
-	    ADD_DEPENDENCIES(after_release_commit_pre rpm_changelog_prev_update)
-	ENDIF(TARGET after_release_commit_pre)
-    ENDMACRO(RPM_CHANGELOG_WRITE_FILE)
 
     MACRO(PACK_RPM)
 	IF(NOT _manage_rpm_dependency_missing )
